Refactored Naming, Refactored code to use MVP

--- a/app/src/main/res/layout/single_person_item.xml
+++ b/app/src/main/res/layout/single_person_item.xml
@@ -5,11 +5,11 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/billi_name"
+        android:id="@+id/person_name"
         style="@style/SubHeaderTextTheme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/billi_name" />
+        android:text="@string/person_name" />
 
     <View
         android:id="@+id/divider"
