--- a/app/src/main/res/layout/activity_split.xml
+++ b/app/src/main/res/layout/activity_split.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.SplitActivity">
+    tools:context=".ui.split.SplitActivity">
 
     <include layout="@layout/toolbar" android:id="@+id/toolbar"/>
 
