--- a/app/src/main/res/layout/single_split_details_item.xml
+++ b/app/src/main/res/layout/single_split_details_item.xml
@@ -5,20 +5,20 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/billi_name"
+        android:id="@+id/person_name"
         style="@style/SubHeaderTextTheme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/billi_name"
+        android:text="@string/person_name"
         android:textColor="@color/primaryTextColor"
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/billi_split_amount"
+        android:id="@+id/person_split_amount"
         style="@style/SecondaryTextTheme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/billi_split_amount"
+        android:text="@string/person_split_amount"
         android:textColor="@android:color/holo_green_dark"
         android:textStyle="bold" />
 
@@ -32,11 +32,11 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/billi_food_eaten"
+        android:id="@+id/person_food_eaten"
         style="@style/SecondaryTextTheme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/billi_food_eaten" />
+        android:text="@string/person_food_eaten" />
 
     <View
         android:id="@+id/divider"
