--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#2196F3</color>
-    <color name="colorPrimaryDark">#1976D2</color>
-    <color name="colorPrimaryLight">#BBDEFB</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#b15dff</color>
+    <color name="colorPrimaryDark">#7c2bcb</color>
+    <color name="colorAccent">#1eb980</color>
 
     <!--Text Colors-->
-    <color name="primaryTextColor">#212121</color>
+    <color name="primaryTextColor">#3b3b3b</color>
     <color name="secondaryTextColor">#757575</color>
     <color name="darkGrey">#5b5b5b</color>
 
