--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -39,12 +39,12 @@
         <item name="android:textColor">@color/secondaryTextColor</item>
     </style>
 
-    <style name="ButtonTheme" parent="android:Widget.Button">
+    <style name="AddButtonTheme" parent="android:Widget.Button">
         <item name="android:fontFamily">@font/roboto</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">22sp</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:background">@color/colorAccent</item>
+        <item name="android:background">@drawable/bg_add_button</item>
         <item name="android:textColor">@android:color/white</item>
     </style>
 
